<resources>
    <string name="app_name">Kinga_Florek_czw_9_30</string>
    <string name="currency_converter">Przelicznik Walut</string>
    <string name="exchange_rates">Kursy Walut</string>
    <string name="gold">Złoto</string>
    <string name="gold_main">Aktualny kurs złota wynosi:</string>
    <string name="gold_rate">6692.62 PLN/uncję</string>
    <string name="details">Szczegóły</string>
    <string name="todayRateText">Dzisiejszy kurs: %1$f</string>
    <string name="previousRateText">Wczorajszy kurs: %1$f</string>
    <string name="change">CHANGE</string>
    <string name="edit_to_pln_text">1.0</string>
    <string name="edit_from_pln_text">1.0</string>
    <string name="convert_to_pln">Convert to PLN</string>
    <string name="convert_from_pln">Convert from pln</string>
    <string name="resultTextString">%1$.2f %2$s = %3$.2f %4$s</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="pln">PLN</string>
    <string name="arrow_down">↓</string>
    <string name="arrow_up">↑</string>
    <string name="konwertuj">konwertuj</string>
    <string name="converter">Konwerter</string>
</resources>