<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrencyConverterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/editFromPLNText"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:text="@string/edit_from_pln_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultFromPLN"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editFromPLNText" />

        <TextView
            android:id="@+id/currencyFromText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="USD"
            app:layout_constraintBottom_toBottomOf="@+id/resultFromPLN"
            app:layout_constraintStart_toEndOf="@+id/resultFromPLN"
            app:layout_constraintTop_toTopOf="@+id/resultFromPLN" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="PLN"
            app:layout_constraintBottom_toBottomOf="@+id/editFromPLNText"
            app:layout_constraintStart_toEndOf="@+id/editFromPLNText"
            app:layout_constraintTop_toTopOf="@+id/editFromPLNText" />

        <Button
            android:id="@+id/changeFromButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/change"
            app:layout_constraintBottom_toBottomOf="@+id/currencyFromText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/currencyFromText" />

        <Button
            android:id="@+id/convertFromPLNButton"
            android:layout_width="222dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/convert_from_pln"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultFromPLN" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="2dp">

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:text="@string/edit_to_pln_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/convertToPLNButton"
            android:layout_width="222dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/convert_to_pln"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultToText" />

        <TextView
            android:id="@+id/currencyToText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="USD"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName3"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName3"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName3" />

        <Button
            android:id="@+id/changeToButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/change"
            app:layout_constraintBottom_toBottomOf="@+id/currencyToText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/currencyToText" />

        <TextView
            android:id="@+id/resultToText"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="PLN"
            app:layout_constraintBottom_toBottomOf="@+id/resultToText"
            app:layout_constraintStart_toEndOf="@+id/resultToText"
            app:layout_constraintTop_toTopOf="@+id/resultToText" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>